creacion de models y  services

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 	  <ul>
 		  <li> <a routerLink="/header"> header </a>
 		  </li>
-		  <li> <a routerLink="/work-experience"> work-experience </a>
+		  <li> <a routerLink="/workexperience"> work-experience </a>
                   </li>
 		  <li> <a routerLink="/education"> education </a>
                   </li>
