--- a/src/app/admin-header/admin-header.component.html
+++ b/src/app/admin-header/admin-header.component.html
@@ -19,6 +19,8 @@
        <p class="life-container" *ngFor="let header of header;">
 
           <input type="submit" class="btn" value="delete" (click)="deleteHeader(header.id)">
+	  <input type="submit" class="btn" value="update" (click)="updateHeader(header.id)">
+
           {{header.name}} – {{header.email}} - {{header.phoneNumber}}
        </p>
 
