--- a/src/app/admin-skills/admin-skills.component.html
+++ b/src/app/admin-skills/admin-skills.component.html
@@ -21,6 +21,7 @@
     <div class="col">
         <p class="life-container" *ngFor="let skill of skills;">
 
+	    <input type="submit" class="btn" value="Update" (click)="updateSkill(skill.id)">
             <input type="submit" class="btn" value="Delete" (click)="deleteSkill(skill.id)">
             {{skill.skill}} – {{skill.proficiency}}
         </p>
