--- a/src/app/admin-header/admin-header.component.html
+++ b/src/app/admin-header/admin-header.component.html
@@ -10,19 +10,35 @@
           <input type="text" class="txt" name="phoneNumber" placeholder="phone number" [(ngModel)]="myHeader.phoneNumber"><br>
           <input type="text" class="txt" name="location" placeholder="location" [(ngModel)]="myHeader.location"><br>
           <input type="text" class="txt" name="socialNetwork" placeholder="social network" [(ngModel)]="myHeader.socialNetwork"><br>
+		<input type="submit" class="btn" [disabled]="!canAddHeader && !selectedId" value="{{ btnTxt }}" (click)="agregarHeader()">
 
-          <input type="submit" class="btn" value="{{ btnTxt }}" (click)="agregarHeader()">
        </form>
+
+	<p *ngIf="!canAddHeader && !selectedId" style="color: red;">
+	  Ya existe un header. Solo puedes tener uno.
+	</p>
+
+
     </div>
 
     <div class="col">
-       <p class="life-container" *ngFor="let header of header;">
+	<div class="record-card profile-card" *ngFor="let header of header">
+	  <div class="profile-content">
+	    <img [src]="header.photoURL" alt="Photo" class="profile-img">
 
-          <input type="submit" class="btn" value="delete" (click)="deleteHeader(header.id)">
-	  <input type="submit" class="btn" value="update" (click)="updateHeader(header.id)">
+	    <div class="profile-info">
+	      <p><strong>{{ header.name }}</strong></p>
+	      <p><em>{{ header.goalLife }}</em></p>
+	      <p>{{ header.email }} - {{ header.phoneNumber }} - {{ header.socialNetwork }}</p>
+	      <p>{{ header.location }}</p>
 
-          {{header.name}} – {{header.email}} - {{header.phoneNumber}}
-       </p>
+	      <div class="record-buttons">
+	        <button (click)="updateHeader(header.id)">Update</button>
+       	 <button (click)="deleteHeader(header.id)">Delete</button>
+	      </div>
+	    </div>
+	  </div>
+	</div>
 
     </div>
 
