--- a/src/app/admin-skills/admin-skills.component.html
+++ b/src/app/admin-skills/admin-skills.component.html
@@ -19,13 +19,15 @@
     </div>
 
     <div class="col">
-        <p class="life-container" *ngFor="let skill of skills;">
+	<div class="record-card" *ngFor="let skill of skills">
+	      <h3>{{ skill.skill }}</h3>
+	      <p><strong>Proficiency:</strong> {{ skill.proficiency }}%</p>
 
-	    <input type="submit" class="btn" value="Update" (click)="updateSkill(skill.id)">
-            <input type="submit" class="btn" value="Delete" (click)="deleteSkill(skill.id)">
-            {{skill.skill}} – {{skill.proficiency}}
-        </p>
-
+	      <div class="record-buttons">
+	        <button (click)="updateSkill(skill.id)">Update</button>
+	        <button (click)="deleteSkill(skill.id)">Delete</button>
+	      </div>
+        </div>
     </div>
 
 </div>
