--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import url('https://fonts.googleapis.com/css?family=REleway:300,700');
+@import url('https://fonts.googleapis.com/css?family=Raleway:300,700');
 
 :root {
   --morado-claro: #d1b3ff;
