--- a/src/app/admin-interests/admin-interests.component.html
+++ b/src/app/admin-interests/admin-interests.component.html
@@ -9,6 +9,7 @@
   <div class="col">
     <form>
       <input type="text" class="txt" name="description" placeholder="Interest description" [(ngModel)]="myInterests.description"><br>
+      <p style="color: red">{{ errorMessage }}</p> <!-- llenar campos completos -->
       <input type="submit" class="btn" value="{{ btnTxt }}" (click)="agregarInterests()">
     </form>
   </div>
