--- a/src/app/admin-certificates/admin-certificates.component.html
+++ b/src/app/admin-certificates/admin-certificates.component.html
@@ -15,6 +15,8 @@
           <input type="text" class="txt" name="title" placeholder="title" [(ngModel)]="myCertificates.title"><br>
           <input type="text" class="txt" name="year" placeholder="year AAAA" [(ngModel)]="myCertificates.year"><br>
           <input type="text" class="txt" name="description" placeholder="description" [(ngModel)]="myCertificates.description"><br>
+	  <p style="color: red">{{ errorMessage }}</p> <!-- llenar campos completos -->
+
           <input type="submit" class="btn" value="{{ btnTxt }}" (click)="AgregarCertificates()">
        </form>
     </div>
