--- a/src/app/admin-skills/admin-skills.component.html
+++ b/src/app/admin-skills/admin-skills.component.html
@@ -14,6 +14,7 @@
         <form>
             <input type="text" class="txt" name="skill" placeholder="skill description" [(ngModel)]="mySkill.skill"><br>
 	    <input type="text" class="txt" name="proficiency" placeholder="proficiency" [(ngModel)]="mySkill.proficiency"><br>
+	    <p style="color: red">{{ errorMessage }}</p> <!--mensaje error -->
             <input type="submit" class="btn" value="{{ btnTxt }}" (click)="agregarSkill()">
         </form>
     </div>
